overflow fix for mobile, test

--- a/css/index.css
+++ b/css/index.css
@@ -99,6 +99,7 @@
   .home-content-container {
     flex-direction: column;
     gap: 40px;
+    overflow-x: auto;
   }
 
   .slide {
